# agentos-mvp

./: .gitignore  AGENTS.md  ENTREGA_MINIMAX.md  README.md  bitacora_fase_actual_agent_os_mvp.md  loop.py  pyproject.toml  requirements.txt  research_directives.md  rp_pipeline.py  test_debug.py
.agentos_memory/: chroma.sqlite3
.cursor/rules/: RULE.md
agentos/: __init__.py  errors.py
agentos/api/: auth.py  main.py  models.py
agentos/bootstrap/: __init__.py  cleanup.py  init.py  state.py
agentos/config/: __init__.py  schema.py
agentos/integrations/: __init__.py
agentos/llm/: __init__.py  anthropic_client.py  base.py  cache.py  dummy.py  minimax.py  retry.py
agentos/memory/: __init__.py  base.py  chroma.py  compaction.py  consolidation_job.py  long_term.py  session_transcript.py  short_term.py  transcript.py  working_state.py
agentos/observability/: events.py  logging.py  metrics.py
agentos/orchestrators/: __init__.py  events.py  parallel.py  planner_executor.py  router.py  sequential.py
benchmarks/: research_queries.yaml
config/: agents.yaml  profiles.yaml  tools.yaml
docs/: ADR_001_planner_executor.md  ADR_002_run_command_security.md  ADR_003_docker_backend.md  ADR_004_long_term_memory.md  ADR_005_minimax_integration.md  CLAUDE_INTEGRATION.md  INFORME_EJECUTIVO_MEJORAS_FASE1_4.md  MINIMAX_IMPLEMENTATION.md  SETUP.md  TOOL_SPEC_run_command.md  checklist_4_2_1.md  guia_claude_code.md  runbook_local.md  spec_agentos.md  threat_model.md
scripts/: judge.py  run_tests.sh  setup_dev.sh
tests/: conftest.py
tools/: check_import.py
(+108 files in other folders)
